# TAPP-torch

./: .gitignore  .gitmodules  AUTHORS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-cpu.yml
benchmarks/: README.md  backend.py  bench_contraction.py
benchmarks/networks/: ctm_1x1.py  ctm_2x3.py
examples/: tensordot_bs_example.py  tensordot_example.py
tapp_torch/: __init__.py  ops.py
tapp_torch/csrc/: tapp_contract.cpp
tapp_torch/csrc/cuda/: cutensor_contract_bs.cu  tapp_contract.cu  tapp_contract_dense.cu
tests/: test_tapp_bs_torch.py  test_tapp_torch.py
tests/inputs/: case1.json
