[build-system]
requires = [
  "setuptools",
  "torch>=2.10",
  # cutensor must be pre-installed
]
build-backend = "setuptools.build_meta"

[project]
name = "tapp-torch"
version = "0.1.0"
requires-python = ">=3.10"
description = "TAPP extension for PyTorch using Stable ABI"
readme = "README.md"
dependencies = [
  "torch>=2.10",
  "numpy",
]

[project.optional-dependencies]
cu12 = ["cutensor-cu12>=2.5"]
cu13 = ["cutensor-cu13>=2.5"]
tests = [
  "pytest",
  "expecttest",
]
benchmarks = [
  "cotengra",
  "opt_einsum",
  "autoray",
  "cmaes", 
  "cotengrust", 
  "cytoolz", 
  "kahypar"
]
