[build-system]
requires = [
  "setuptools",
  "hatchling",
  "hatch-vcs",
  "torch>2.9",
  # cutensor must be pre-installed
]
build-backend = "setuptools.build_meta"

[project]
name = "tapp-torch"
version = "0.1.0"
requires-python = ">=3.10"
description = "TAPP extension for PyTorch using Stable ABI"
readme = "README.md"
dependencies = [
  "torch>2.9",
  "numpy",
]

[project.optional-dependencies]
cu12 = ["cutensor-cu12>=2.5"]
cu13 = ["cutensor-cu13>=2.5"]
tests = [
  "pytest",
  "expecttest",
  "symmray @ git+https://github.com/jcmgray/symmray.git"
]
benchmarks = [
  "cotengra",
  "opt_einsum",
  "symmray @ git+https://github.com/jcmgray/symmray.git",
  "autoray",
  "cmaes", 
  "cotengrust", 
  "cytoolz", 
  "kahypar"
]
